<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="yesterday">Yesterday</string>
    <string name="ximalaya_story_sync_data">Synchronizing data…</string>
    <string name="ximalaya_story_data_delay">Data update timed out</string>
    <string name="ximalaya_story">Story telling</string>
    <string name="xiaomi_nickname">Mi account nickname</string>
    <string name="xiaomi_login_failed">Couldn\'t sign in to Mi system account, please try again.</string>
    <string name="xiaomi_account">Mi account</string>
    <string name="wrong_nickname">Enter a valid relationship</string>
    <string name="wifi_password">Wi-Fi password</string>
    <string name="wifi_name">Wi-Fi name</string>
    <string name="wifi_is_disconnecting">Disconnecting…</string>
    <string name="wifi_is_connecting">Connecting…</string>
    <string name="weixin_not_installed">WeChat has not been installed</string>
    <string name="weight">Weight</string>
    <string name="week_average_title">Weekly exercise trend</string>
    <string name="week_6">Sat</string>
    <string name="week_5">Fri</string>
    <string name="week_4">Thu</string>
    <string name="week_3">Wed</string>
    <string name="week_2">Tue</string>
    <string name="week_1">Mon</string>
    <string name="week_0">Sun</string>
    <string name="wechat_notice_bind_nickname">Kid</string>
    <string name="wechat_notice_bind_dialog_refuse">Reject</string>
    <string name="wechat_invite_member">Invite members via WeChat</string>
    <string name="watch_white_list_open_prompt">The whitelist only takes effect when the watch\'s SIM card has activated the caller ID service. If not, this function will not take effect.</string>
    <string name="watch_volume_silence">Mute</string>
    <string name="watch_volume_middle">Medium</string>
    <string name="watch_volume_low">Low</string>
    <string name="watch_volume_high">High</string>
    <string name="watch_volume">Watch volume</string>
    <string name="watch_unbind_already">Watch has been unpaired</string>
    <string name="watch_state_unknown">Watch\'s network signal is poor or it is turned off.</string>
    <string name="watch_state_silence">School mode is active…</string>
    <string name="watch_state_low_power_off">Watch\'s battery is low, it may be turned off.</string>
    <string name="watch_state_flight_already">Sleeping period is active, the watch may be in sleep mode.</string>
    <string name="watch_state_flight">Sleeping period has started</string>
    <string name="watch_shut_down_rightnow">power off</string>
    <string name="watch_poweroff_prompt">Watch has been turned off</string>
    <string name="watch_poweroff_already">Watch has been turned off and will turn on at </string>
    <string name="watch_offline_set_state"><xliff:g>%s</xliff:g> may not be online, the settings will not take effect until the watch connects to the network.</string>
    <string name="watch_offline">Watch is not online, its network signal is poor, or it is turned off.</string>
    <string name="watch_number_change_title">Change watch\'s phone number</string>
    <string name="watch_notice_method_detail2">Notification method for messages and incoming calls received by watch.</string>
    <string name="watch_notice_method">Watch\'s notification method</string>
    <string name="watch_light_dark">Dark</string>
    <string name="watch_light_bright">Bright</string>
    <string name="watch_light">Watch brightness</string>
    <string name="watch_join_family"><xliff:g>%1$s</xliff:g> joined <xliff:g>%2$s</xliff:g></string>
    <string name="watch_is_recording">Watch is recording audio…</string>
    <string name="watch_is_null">No watch info acquired, the watch may have been unpaired.</string>
    <string name="watch_friend_info">Watch friends can call and send voice messages to the watch.</string>
    <string name="watch_friend">Watch friend</string>
    <string name="watch_first_set_failed">Couldn\'t set phone number</string>
    <string name="watch_first_set_dlg_right_content">Continue configuration</string>
    <string name="watch_first_set_dlg_left_content">Later</string>
    <string name="watch_first_set_dlg_content">No number entered. Set it now or modify it in the watch data later.</string>
    <string name="watch_download_success"><xliff:g>%1$s</xliff:g>\'s download of <xliff:g>%2$s</xliff:g> has been completed.</string>
    <string name="watch_download_fail"><xliff:g>%1$s</xliff:g> couldn\'t download <xliff:g>%2$s</xliff:g></string>
    <string name="watch_at_time_leave_safe_area"><xliff:g>%1$s</xliff:g> has left from <xliff:g>%2$s</xliff:g> at <xliff:g>%3$s</xliff:g></string>
    <string name="watch_at_time_arrive_safe_area"><xliff:g>%1$s</xliff:g> has arrived at <xliff:g>%2$s</xliff:g> at <xliff:g>%3$s</xliff:g></string>
    <string name="watch_app_install_title">Download and install the app</string>
    <string name="watch_app_install_desc"><xliff:g>%1$s</xliff:g> will consume <xliff:g>%2$s</xliff:g> of mobile data</string>
    <string name="watch_app_download_type_modify">Modify download method</string>
    <string name="watch_app_download_in_wifi_desc"><xliff:g>%s</xliff:g> will be downloaded and installed when the watch is being charged and is connected to Wi-Fi</string>
    <string name="watch_app_download_in_wifi">Only download via Wi-Fi</string>
    <string name="watch_app_download_in_mobile_desc"><xliff:g>%s</xliff:g> will be downloaded and installed when the watch is online</string>
    <string name="watch_app_download_in_mobile">Direct download</string>
    <string name="watch_already_leave_safe_area"><xliff:g>%1$s</xliff:g> has left from <xliff:g>%2$s</xliff:g></string>
    <string name="watch_already_arrive_safe_area"><xliff:g>%1$s</xliff:g> has arrived at <xliff:g>%2$s</xliff:g></string>
    <string name="watch_add_friend"><xliff:g>%1$s</xliff:g> requested <xliff:g>%2$s</xliff:g> to become friends</string>
    <string name="wake_up_device_rightnow_desc">Sending a wake-up SMS message to the watch will temporarily enable its mobile data and make it possible to locate the watch. (Standard SMS rates apply.)</string>
    <string name="wake_up_device_rightnow">Connect to GPS</string>
    <string name="wait_for_address">Couldn\'t acquire address info, please try again.</string>
    <string name="volume_vibrate_led">Brightness, sound &#038; vibration</string>
    <string name="volume_vibrate">Sound &#038; vibration</string>
    <string name="volume_and_vibrate">Sound &#038; vibration</string>
    <string name="voice_button">Voice button</string>
    <string name="voice">[Voice]</string>
    <string name="videocall_switch_camera">Switch camera</string>
    <string name="videocall_request_is_unavailable">This call request has expired, please send a new call request.</string>
    <string name="videocall_request_ing">Sending a video call request to <xliff:g>%s</xliff:g>…</string>
    <string name="videocall_request_in_mobile">Mobile data will be consumed while connected to a mobile network. Continue anyway?</string>
    <string name="videocall_receive_request"><xliff:g>%s</xliff:g> invites you for a video call</string>
    <string name="videocall_phonecall_ing"><xliff:g>%s</xliff:g> is currently in a call, please try again later.</string>
    <string name="videocall_network_error">Network connection is unstable, the video call will automatically be ended.</string>
    <string name="videocall_netstate_mobile">Watch is using mobile network</string>
    <string name="videocall_in_silence"><xliff:g>%s</xliff:g>\'s watch is in school mode</string>
    <string name="videocall_in_mobile_2g"><xliff:g>%s</xliff:g> has an unstable connection, please try again later.</string>
    <string name="videocall_in_low_power">Battery level of <xliff:g>%s</xliff:g>\'s watch is less than 20%%, please charge it and try again.</string>
    <string name="videocall_in_low_memory"><xliff:g>%s</xliff:g>\'s watch has insufficient storage space and is unable to make a video call, please try again after freeing up space.</string>
    <string name="videocall_in_high_temperature"><xliff:g>%s</xliff:g>\'s watch is overheated, please try again later.</string>
    <string name="videocall_in_charging"><xliff:g>%s</xliff:g>\'s watch is being charged, please try again later.</string>
    <string name="videocall_error_other"><xliff:g>%s</xliff:g> is temporarily unavailable, please try again later.</string>
    <string name="videocall_error">Error while calling, the video call will automatically be ended.</string>
    <string name="videocall_end_by_other">Other user has ended the call</string>
    <string name="videocall_end">Call has been ended</string>
    <string name="videocall_conversation_ing"><xliff:g>%s</xliff:g> is currently in a video call, please try again later.</string>
    <string name="videocall_cancel">End call</string>
    <string name="videocall_accept">Answer</string>
    <string name="videocall">Video call</string>
    <string name="video_delete">Video has been deleted</string>
    <string name="video">[Video]</string>
    <string name="verify_code_not_available">Verification code is invalid, please acquire a new one.</string>
    <string name="use_no_call">Use speaker mode</string>
    <string name="use_call">Use listening mode</string>
    <string name="upload_file_fail">Couldn\'t upload file</string>
    <string name="update_now">Update now</string>
    <string name="update_later">Update later</string>
    <string name="update_bin_onlywifi_desc">When enabled, the watch will only download firmware updates via Wi-Fi.</string>
    <string name="update_bin_onlywifi">Only download firmware updates via Wi-Fi.</string>
    <string name="setting_watch_sleep">Sleeping period</string>
    <string name="setting_apnconfig">APN configuration</string>
    <string name="repair_track_query">Progress inquiry</string>
    <string name="repair_track_policy">After-sales policy</string>
    <string name="repair_track_commit">Apply for after-sales service</string>
    <string name="operation_mode_setting">Location mode</string>
    <string name="offline_mode_setting">Mobile data</string>
    <string name="logout">Sign out</string>
    <string name="intelligent_powersaving_describe">Increase watch\'s battery life, but slightly increases the time to load apps.</string>
    <string name="intelligent_power_saving">Smart power saving</string>
    <string name="guide_bind_title">Add new watch</string>
    <string name="bind_number">Enter verification code to pair</string>
    <string name="bind_num_detail">Press watch\'s button to acquire verification code</string>
    <string name="bind_code_detail">QR code on the watch</string>
    <string name="bind_code">Scan QR code to pair</string>
    <string name="app_uses_info">App usage duration</string>
    <string name="privacy">Privacy Policy</string>
    <string name="agreement">User Agreement</string>
    <string name="str_dev_opt">Developer options</string>
    <string name="repair_track_shop">Aftersale store</string>
    <string name="app_name">Mibro</string>
    <string name="select_map">Select map (only Test)</string>
    <string name="select_current_region">Choose your current location</string>
    <string name="motion_target_0">1000m race</string>
    <string name="motion_target_1">One minute rope skipping </string>
    <string name="motion_target_2">One minute sit-ups</string>
    <string name="motion_no_record">No exercise data yet</string>
    <string name="week_title_0">Sports Test Statistics</string>
    <string name="week_title_1">Exercise duration </string>
    <string name="motion_sport_hint_0">Total exercise duration (min)</string>
    <string name="motion_sport_hint_1">Compared with last week (min)</string>
    <string name="motion_sport_hint_2">Total consumption (kcal)</string>
    <string name="motion_sport_hint_3">Compared with last week (kcal)</string>
    <string name="week_title_2">Exercise consumption</string>
</resources>