<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".motion.activity.MotionWeekRecordActivity">

    <include
        android:id="@+id/layout_title"
        layout="@layout/activity_title" />
    <TextView
        android:id="@+id/tv_no_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motion_no_record"
        android:textSize="16sp"
        android:textColor="#FFF8F8FB"
        app:layout_constraintTop_toBottomOf="@+id/layout_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
        android:id="@+id/iv_no_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/motion_no_week_record"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_no_record"/>
    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_no_record,tv_no_record"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_title">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_week_title_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_title_0"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <com.xiaoxun.xun.motion.views.MotionWeekKickView
                android:id="@+id/motion_fun_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:motion_head_icon="@drawable/motion_outhome_run"
                app:motion_head_title="@string/motion_target_0"
                app:motion_head_rank_color="#FF13D09D"
                app:motion_chart_start_color="#4D00BFA0"
               app:motion_chart_end_color="#0000DBB7"
                app:layout_constraintTop_toBottomOf="@+id/tv_week_title_0"/>

            <com.xiaoxun.xun.motion.views.MotionWeekKickView
                android:id="@+id/motion_fun_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:motion_head_icon="@drawable/motion_jump"
                app:motion_head_title="@string/motion_target_1"
                app:motion_head_rank_color="#FFFF4A4A"
                app:motion_chart_start_color="#66FF4A4A"
                app:motion_chart_end_color="#00FF4A4A"
                app:layout_constraintTop_toBottomOf="@+id/motion_fun_1"/>

            <com.xiaoxun.xun.motion.views.MotionWeekKickView
                android:id="@+id/motion_fun_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:motion_head_icon="@drawable/motion_ship"
                app:motion_head_title="@string/motion_target_2"
                app:motion_head_rank_color="#FFFEBB02"
                app:motion_chart_start_color="#66FEBB02"
                app:motion_chart_end_color="#00FEBB02"
                app:layout_constraintTop_toBottomOf="@+id/motion_fun_2"/>

            <TextView
                android:id="@+id/tv_week_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_title_1"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/motion_fun_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.xiaoxun.xun.motion.views.MotionWeekSportView
                android:id="@+id/motion_sport_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:motion_chart_color="#4D00BFA0"
                app:motion_bottom_0="@string/motion_sport_hint_0"
                app:motion_bottom_1="@string/motion_sport_hint_1"
                app:layout_constraintTop_toBottomOf="@+id/tv_week_title_1"/>

            <TextView
                android:id="@+id/tv_week_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_title_2"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/motion_sport_0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.xiaoxun.xun.motion.views.MotionWeekSportView
                android:id="@+id/motion_sport_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:motion_chart_start_color="#4D00BFA0"
                app:motion_bottom_0="@string/motion_sport_hint_2"
                app:motion_bottom_1="@string/motion_sport_hint_3"
                app:layout_constraintTop_toBottomOf="@+id/tv_week_title_2"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@+id/motion_sport_1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>