<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom_setting="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <include
        android:id="@+id/title"
        layout="@layout/activity_title" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/iv_app_about_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_about_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tv_app_about_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_app_about_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textSize="@dimen/xiaomiMyTextSize1" />

        <TextView
            android:id="@+id/tv_app_about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_app_about_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="V.2.3.1.160623"
            android:textSize="@dimen/xiaomiMyTextSize1" />

        <ImageView
            android:id="@+id/iv_selector"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/tv_app_about_version"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/divideleftandright"
            android:paddingRight="@dimen/divideleftandright"
            android:src="@color/line_grey" />

        <com.xiaoxun.xun.views.CustomSettingView
            android:id="@+id/layout_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_selector"
            custom_setting:tv_title="@string/privacy" />

        <com.xiaoxun.xun.views.CustomSettingView
            android:id="@+id/layout_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_privacy"
            custom_setting:tv_title="@string/agreement" />

        <com.xiaoxun.xun.views.CustomSettingView
            android:id="@+id/layout_apnconfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom_setting:tv_title="@string/setting_apnconfig"
            android:visibility="gone"
            android:layout_below="@id/layout_agreement"
            />
        <com.xiaoxun.xun.views.CustomSettingView
            android:id="@+id/layout_develop_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom_setting:tv_title="@string/str_dev_opt"
            android:layout_below="@id/layout_apnconfig"
            />
        <com.xiaoxun.xun.views.CustomSettingView
            android:id="@+id/layout_select_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_develop_mode"
            custom_setting:tv_title="@string/select_current_region" />
        <com.xiaoxun.xun.views.CustomSettingView
            android:id="@+id/layout_map_trans"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_below="@id/layout_select_region"
            android:layout_height="wrap_content"
            custom_setting:tv_title="@string/select_map" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/title_grey"
        android:textSize="@dimen/MyTextSize2"
        android:layout_above="@+id/logout_layout"
        />

    <RelativeLayout
        android:id="@+id/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="80.66dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="313.34dp"
            android:layout_height="39.33dp"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_unbind_selector"
            android:text="@string/logout"
            android:textColor="@color/title_grey"
            android:textSize="@dimen/MyTextSize2" />
    </RelativeLayout>

</RelativeLayout>